--- a/src/lib/styles/main.css
+++ b/src/lib/styles/main.css
@@ -1,1 +1,29 @@
 @layer reset, base, tokens, recipes, utilities;
+
+:root {
+  /* alias fonts to CSS variables */
+  --font-geist: "Geist", sans-serif;
+  --font-geist-mono: "Geist Mono", monospace;
+
+  /* semantic */
+  --font-primary: var(--font-geist);
+  --font-code: var(--font-geist-mono);
+}
+
+@layer base {
+  :root {
+    font-family: var(--font-primary);
+  }
+}
+
+@font-face {
+  font-family: "Geist";
+  src: url("../fonts/geist.otf") format("opentype");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Geist Mono";
+  src: url("../fonts/geist.mono.otf") format("opentype");
+  font-display: swap;
+}
